--- a/css/style.css
+++ b/css/style.css
@@ -329,14 +329,14 @@ button:focus {
 .fixed__nav {
     position: fixed;
     right: 0;
-    bottom: -50px;
+    bottom: -20px;
     transform: translate(-50%, -50%);
     z-index: 5;
 }
 
 .fixed__nav ul {
     list-style: none;
-    margin: -10px;
+    margin: -8px;
     padding: 0;
 }
 
@@ -768,6 +768,7 @@ button:focus {
     font-weight: 900;
     letter-spacing: .1rem;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .product {
@@ -786,10 +787,36 @@ button:focus {
 
 .product__item {
     width: 40%;
+    cursor: pointer;
+}
+
+.product__item i {
+    display: block;
+    text-align: center;
+    font-size: 30px;
+}
+
+.product__item p {
+    font-size: 16px;
+    text-align: left;
+    display: block;
+}
+
+.product__item1 i {
+    display: block;
+    text-align: center;
+    font-size: 30px;
+}
+
+.product__item1 i p {
+    font-size: 16px;
+    text-align: center;
+    display: block;
 }
 
 .product__item1 {
     width: 60%;
+    cursor: pointer;
 }
 
 .product__item1:first-child {
@@ -820,13 +847,23 @@ button:focus {
 
 .product__desc h3 {
     font-size: 30px;
-    font-weight: bold;
-    color: #003c63;
+    background-color: #003c63;
+    color: transparent;
+    text-shadow: 0px 8px 6px rgba(255, 255, 255, 0.5);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 }
 
 .product__desc p {
     font-size: 20px;
     color: #003c63;
+    background-color: #003c63;
+    color: transparent;
+    text-shadow: 0px 8px 6px rgba(255, 255, 255, 0.5);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 }
 
 .product__title {
@@ -850,7 +887,7 @@ button:focus {
 }
 
 .footer {
-    background-image: url(https://gemskyworld.vn/Data/Sites/1/skins/default/img/bg-footer.jpg);
+    background-image: url(../images/bg-footer.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 50px 0;
@@ -1291,11 +1328,200 @@ textarea::placeholder {
     display: none;
 }
 
+.powup__img {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    left: 0;
+    right: 0;
+    max-height: 100vh;
+    overflow-y: scroll;
+    background-color: white;
+    width: 100%;
+    display: block;
+    transition: all 2s ease;
+}
 
+.powup__none {
+    display: none;
+}
+
+.powup__img h1 {
+    text-align: center;
+}
+
+.powup__close {
+    text-align: right;
+    position: fixed;
+    right: 10;
+    top: 0;
+    z-index: 200;
+    width: 100%;
+}
+
+.powup__close i {
+    width: 30px;
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0.561);
+    margin-right: 20px;
+    border-radius: 5px;
+    font-size: 30px;
+}
+
+.powup__img img {
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+}
+
+.button__homes {
+    padding: 5px;
+    color: #82ba41;
+    background-color: initial;
+    border: none;
+    cursor: pointer;
+    border-bottom: 1px solid #82ba41;
+}
+
+.powup__utilities {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    left: 0;
+    right: 0;
+    max-height: 100vh;
+    overflow-y: scroll;
+    background-color: #f9f9f9;
+    width: 100%;
+    display: block;
+    transition: all 2s ease;
+}
+
+.button__homeup {
+    display: none;
+}
+
+.powup__utilities h1 {
+    text-align: center;
+}
+
+.powup__utilities img {
+    width: 100%;
+}
+
+.powup__utilities ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.powup__utilities ul li {
+    margin: 20px 0;
+    width: 25%;
+}
+
+.items {
+    display: flex;
+    align-items: center;
+}
+
+.items p {
+    margin: 0;
+}
+
+/* .number {
+    margin-right: 20px;
+} */
+
+.powup__utilities h1 {
+    margin-bottom: 0;
+    color: #82ba41;
+    font-size: 1.875rem;
+    font-weight: 800;
+    line-height: 1.3;
+    text-transform: uppercase;
+    padding: 40px 0;
+}
+
+.number span {
+    justify-content: center;
+    border: 1px solid #003c63;
+    border-radius: 50%;
+    width: 60px;
+    min-width: 60px;
+    height: 60px;
+    font-weight: bold;
+    padding: 8px 10px;
+    font-size: 25px;
+    font-family: ui-serif;
+    color: #003c63;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.powup__utilities p {
+    text-align: justify;
+    padding: 0 20px;
+    font-size: 16px;
+}
+
+.powup__close-utilities {
+    text-align: right;
+    position: fixed;
+    right: 10;
+    top: 0;
+    z-index: 200;
+    width: 100%;
+}
+
+.powup__close-utilities i {
+    margin-right: 10px;
+    font-size: 30px;
+    background-color: rgba(255, 255, 255, 0.561);
+    border-radius: 5px;
+}
+
+.powup__close-desc {
+    font-size: 16px;
+    line-height: 32px;
+    text-align: justify;
+}
 
 @media (max-width: 768px) {
     .item {
         padding: 40px 0;
+    }
+
+    .powup__img img {
+        width: 100%;
+    }
+
+    .powup__utilities ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    .powup__utilities ul li {
+        margin: 20px 0;
+        width: 50%;
+    }
+
+    .powup__utilities p {
+        padding: 0 20px;
+        font-size: 14px;
+        text-align: initial;
+    }
+
+    .powup__close i {
+        margin-right: 10px;
+        font-size: 30px;
     }
 
     .footer__input {
@@ -1582,6 +1808,7 @@ textarea::placeholder {
         position: relative;
         margin-top: 10px;
         height: 300px;
+
     }
 
     .product__item:first-child {
